--- a/index.html
+++ b/index.html
@@ -74,12 +74,12 @@
                     <p>Frontend Developer</p>
                 </li>
                 <li>
-                    <img src="/img/marketing.jpg" alt="Marketing" width="270">
+                    <img src="./img/marketing.jpg" alt="Marketing" width="270">
                     <h3>Николай Тарасов</h3>
                     <p>Marketing</p>
                 </li>
                 <li>
-                    <img src="/img/UI.jpg" alt="UI Designer" width="270">
+                    <img src="./img/UI.jpg" alt="UI Designer" width="270">
                     <h3>Михаил Ермаков</h3>
                     <p>UI Designer</p>
                 </li>
