--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
 </head>
 <body>
     <header>
+        <a href="./index.html">
+            Web<span>Studio</span>
+        </a>
         <nav>
             <ul>
-                <li><a href="./index.html"><span>Web</span>Studio</a></li>
                 <li><a href="">Студия</a></li>
                 <li><a href="">Портфолио</a></li>
                 <li><a href="">Контакты</a></li>
@@ -22,28 +24,34 @@
         </ul>
     </header>
     <main>
-        <div>
+        <section>
         <h1>Эффективные решения для вашего бизнеса</h1>
-        <button>
-            Заказать услугу
-        </button>
-        </div>
-        <div>
+        <button type="button">Заказать услугу</button>
+        </section>
+
+        <!--Наши преимущества-->
+        <section>
+            <!--<h2>Наши преимущества</h2>-->
+        <ul>
+        <li>
             <h3>Внимание к деталям</h3>
             <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
-        </div>
-        <div>
+        </li>
+        <li>
             <h3>Пунктуальность</h3>
             <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
-        </div>
-        <div>
+        </li>
+        <li>
             <h3>Планирование</h3>
             <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
-        </div>
-        <div>
+        </li>
+        <li>
             <h3>Современные технологии</h3>
             <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
-        </div>
+        </li>
+        </ul>
+        </section>
+        
         <!--Секция "Чем мы занимаемся"-->
         <section>
             <h2>Чем мы занимаемся</h2>
@@ -87,7 +95,7 @@
         </section>
     </main>
     <footer>
-        <a href="./index.html"><span>Web</span>Studio</a>
+        <a href="./index.html">Web<span>Studio</span></a>
         <address>
             <ul>
                 <li><a href="">г. Киев, пр-т Леси Украинки, 26</a></li>
